<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFragment"
    android:background="@color/uscred">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rel"
        android:background="@color/uscyellow"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_pic"
            android:layout_width="135dp"
            android:layout_height="135dp"
            app:cardCornerRadius="100dp">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:id="@+id/profile_pic_upload"
                />
        </androidx.cardview.widget.CardView>



        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/em"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/uscid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_perm_identity_24"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/black"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/affiliation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_school_24"
            android:gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:padding="10dp"/>


        <TextView
            android:id="@+id/reserveHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:text="Reservation History"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textSize="27sp"
            android:textStyle="bold" />



    </LinearLayout>


</FrameLayout>