...

    <item
        android:id="@+id/map"
        android:title="Map"
        android:icon="@drawable/baseline_map_24" />
    <item
        android:id="@+id/profile"
        android:title="Profile"
        android:icon="@drawable/ic_baseline_person_24" />


</menu>
