<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFragment"
    android:background="@color/uscred">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/baseline_arrow_back_24"
        app:cornerRadius="10dp"
        app:iconTint="@color/white"
        android:backgroundTint="@color/black"
        android:text="Sign In"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rel"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">




        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:paddingTop="35dp"
            android:text="Register"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageSelectorLinea"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="15dp">
                <ImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/usc_trojan"
                    android:background="@color/uscyellow"
                    android:padding="5dp"/>
                <Space
                    android:layout_width="20dp"
                    android:layout_height="0dp"/>

                <Button
                    android:id="@+id/choosePictureButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upload Picture"
                    android:padding="5dp"
                    android:textColor="@color/uscyellow"/>

            </LinearLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_below="@id/register"
                android:background="#30ffffff"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:hint="First Name"
                android:padding="10dp"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_below="@id/firstName"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="#30ffffff"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:hint="Last Name"
                android:padding="10dp"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lastName"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="#30ffffff"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:hint="Email"
                android:padding="10dp"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/uscid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/email"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="#30ffffff"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:hint="USC ID"
                android:padding="10dp"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/affiliation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/uscid"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="#30ffffff"
                android:drawableLeft="@drawable/ic_baseline_person_24"
                android:drawablePadding="20dp"
                android:hint="Affiliation"
                android:padding="10dp"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/affiliation"
                android:layout_margin="10dp"
                android:background="#30ffffff"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:drawablePadding="20dp"
                android:hint="Password"
                android:padding="10dp"
                android:textColorHint="@color/white"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressR"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressR"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:backgroundTint="@color/black"
            android:text="Create Account" />

    </LinearLayout>

</FrameLayout>